--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
     <div class="text-center bg-white p-8 rounded-lg shadow-lg max-w-md w-full">
+        <img src="holi.png" width="500px" height="300">
         <h1 class="text-4xl font-bold text-gray-800 mb-4">
             Eh?!
         </h1>
