--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
     <div class="text-center bg-white p-8 rounded-lg shadow-lg max-w-md w-full">
         <img src="holi.png" width="500px" height="300">
-        <p>↑↑↑en mi pc funcionando</p>
+        <p>↑↑↑en mi pc funcionando↑↑↑</p>
         <br>
         <h1 class="text-4xl font-bold text-gray-800 mb-4">
             Eh?!
